--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,11 @@
 @layer reset, base, global;
-@import url('./css/reset.css') layer(reset);
-@import url('./css/colors.css') layer(base);
-@import url('./css/typography.css') layer(global);
+
+@import './css/reset.css' layer(reset);
+
+@import './css/variables/layout.css' layer(base);
+@import './css/variables/colors.css' layer(base);
+@import './css/variables/typography.css' layer(base);
+
+@import './css/classes/layout.css' layer(global);
+@import './css/classes/colors.css' layer(global);
+@import './css/classes/typography.css' layer(global);
