--- a/src/css/variables/typography.css
+++ b/src/css/variables/typography.css
@@ -1,8 +1,6 @@
 @font-face {
   font-family: 'Roboto';
-  src:
-    local('Roboto'),
-    url('/fonts/Roboto-VariableFont_wdth,wght.woff2') format('woff2');
+  src: url('/fonts/Roboto-VariableFont_wdth,wght.woff2') format('woff2');
   font-style: normal;
   font-weight: 300 700;
   font-display: block;
