--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,9 @@
-<header>
-  <nav>
-    <a [routerLink]="['/']">star-wars</a>
-    <a [routerLink]="['/movies']">movies</a>
-    <a [routerLink]="['/characters']">characters</a>
-    <a [routerLink]="['/planets']">plantes</a>
-  </nav>
-</header>
-<main>
-  <router-outlet />
-</main>
+<div class="app-shell">
+  <app-header />
+  <app-separator />
+  <main class="g-layout-container">
+    <router-outlet />
+  </main>
+  <app-separator />
+  <app-footer />
+</div>
