--- a/src/css/classes/colors.css
+++ b/src/css/classes/colors.css
@@ -1,27 +1,27 @@
-.color-grey-50 {
+.g-color-grey-50 {
   color: var(--color-grey-50);
 }
 
-.color-grey-60 {
+.g-color-grey-60 {
   color: var(--color-grey-60);
 }
 
-.color-grey-70 {
+.g-color-grey-70 {
   color: var(--color-grey-70);
 }
 
-.color-grey-80 {
+.g-color-grey-80 {
   color: var(--color-grey-80);
 }
 
-.color-grey-90 {
+.g-color-grey-90 {
   color: var(--color-grey-90);
 }
 
-.color-primary {
+.g-color-primary {
   color: var(--color-primary);
 }
 
-.color-secondary {
+.g-color-secondary {
   color: var(--color-secondary);
 }
