--- a/src/css/classes/layout.css
+++ b/src/css/classes/layout.css
@@ -1,4 +1,4 @@
-.layout-container {
+.g-layout-container {
   width: min(100% - (var(--layout-gutter) * 2), var(--viewport-width-max));
   margin-inline: auto;
 }
