--- a/src/css/classes/typography.css
+++ b/src/css/classes/typography.css
@@ -1,53 +1,53 @@
-.title-1 {
+.g-title-1 {
   font-family: var(--font-family-roboto);
   font-size: var(--fs-75);
   line-height: var(--lh-90);
   font-weight: var(--fw-700);
 }
 
-.title-2 {
+.g-title-2 {
   font-family: var(--font-family-roboto);
   font-size: var(--fs-25);
   line-height: var(--lh-35);
   font-weight: var(--fw-300);
 }
 
-.title-3 {
+.g-title-3 {
   font-family: var(--font-family-roboto);
   font-size: var(--fs-25);
   line-height: var(--lh-30);
   font-weight: var(--fw-700);
 }
 
-.label-1 {
+.g-label-1 {
   font-family: var(--font-family-roboto);
   font-size: var(--fs-18);
   line-height: var(--lh-23);
   font-weight: var(--fw-700);
 }
 
-.label-2 {
+.g-label-2 {
   font-family: var(--font-family-roboto);
   font-size: var(--fs-14);
   line-height: var(--lh-17);
   font-weight: var(--fw-700);
 }
 
-.text-3 {
+.g-text-3 {
   font-family: var(--font-family-roboto);
   font-size: var(--fs-14);
   line-height: var(--lh-12);
   font-weight: var(--fw-700);
 }
 
-.text-1 {
+.g-text-1 {
   font-family: var(--font-family-roboto);
   font-size: var(--fs-18);
   line-height: var(--lh-23);
   font-weight: var(--fw-400);
 }
 
-.text-2 {
+.g-text-2 {
   font-family: var(--font-family-roboto);
   font-size: var(--fs-14);
   line-height: var(--lh-17);
