manually create svg sprite sheet for now to allow setting color on svg via css in a clean way. will generate svg sprite sheet later.

--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -21,8 +21,8 @@
 }
 
 .header-logo {
-  /* TODO: text und hintergrund einfärben, zumindest text und alternativ 2 svgs ablegen falls man per css nicht 2 farben in nem svg setzen kann */
-  color: orange;
+  color: var(--color-primary);
+  display: inline-grid;
 }
 
 .header-navigation {
