--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,12 +2,9 @@
   <div class="header-inner">
     <div class="header-inner-main">
       <a class="header-logo" [routerLink]="['/']" aria-label="Go to home page">
-        <img
-          ngSrc="assets/star-wars-logo.svg"
-          width="83"
-          height="37"
-          alt="Star Wars logo"
-        />
+        <svg width="83" height="37" aria-hidden="true" focusable="false">
+          <use href="assets/svg-sprite-sheet/build/sprite-sheet.svg#star-wars-logo"></use>
+        </svg>
       </a>
       <nav class="header-navigation">
         <a [routerLink]="['/']">Star Wars</a>
