roughly finish home page

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,7 +1,7 @@
 <div class="app-shell">
   <app-header />
   <app-separator />
-  <main class="g-layout-container">
+  <main>
     <router-outlet />
   </main>
   <app-separator />
