--- a/src/styles.css
+++ b/src/styles.css
@@ -6,6 +6,7 @@
 @import './css/variables/colors.css' layer(base);
 @import './css/variables/typography.css' layer(base);
 
+/* TODO: Create layout and text components later to replace those global styles */
 @import './css/classes/layout.css' layer(global);
 @import './css/classes/colors.css' layer(global);
 @import './css/classes/typography.css' layer(global);
