improve aria for home page

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,5 +1,5 @@
 <div class="home g-layout-container">
-  <svg width="989" height="441" class="logo" aria-hidden="true" focusable="false">
+  <svg width="989" height="441" class="logo" role="img" aria-label="Star Wars logo">
     <use href="assets/svg-sprite-sheet/build/sprite-sheet.svg#star-wars-logo"></use>
   </svg>
 </div>
