--- a/src/app/components/header/header-link/header-link.html
+++ b/src/app/components/header/header-link/header-link.html
@@ -1,5 +1,5 @@
 <a
-  class="header-navigation-link"
+  class="link"
   [routerLink]="routerLink()"
   routerLinkActive="is-active"
   ariaCurrentWhenActive="page"
