--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -1,13 +1,13 @@
-<header class="header g-layout-container">
-  <div class="header-inner">
-    <div class="header-inner-main">
-      <a class="header-logo" [routerLink]="['/']" aria-label="Go to home page">
+<header class="header">
+  <div class="g-layout-container content">
+    <div class="main">
+      <a class="logo" [routerLink]="['/']" aria-label="Go to home page">
         <svg width="83" height="37" aria-hidden="true" focusable="false">
           <use href="assets/svg-sprite-sheet/build/sprite-sheet.svg#star-wars-logo"></use>
         </svg>
       </a>
       <!-- TODO: Make use of Angular Aria for this navigation -->
-      <nav class="header-navigation" aria-label="Primary">
+      <nav class="navigation" aria-label="Primary">
         <app-header-link [label]="'Filme'" [routerLink]="['/movies']"></app-header-link>
         <app-header-link
           [label]="'Charaktere'"
