add basic movie detail page component and update the movies page

--- a/src/app/pages/movies/movies.html
+++ b/src/app/pages/movies/movies.html
@@ -1,11 +1,6 @@
 <div class="movies">
   <div class="g-layout-container">
-    <app-page-heading
-      location="Film Details"
-      title="Die Rückkehr der Jedi-Ritter"
-      [titleId]="sectionId"
-      subtitle="Episode IV"
-    />
+    <app-page-heading title="Movies" [titleId]="sectionId" />
     <section [attr.aria-labelledby]="sectionId"></section>
   </div>
 </div>
