wip on swapi integration

--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -6,7 +6,7 @@
           <use href="assets/svg-sprite-sheet/build/sprite-sheet.svg#star-wars-logo"></use>
         </svg>
       </a>
-      <!-- TODO: Make use of Angular Aria for this navigation -->
+      <!-- TODO: Make use of [Angular Aria](https://angular.dev/guide/aria/overview) for this navigation -->
       <nav class="navigation" aria-label="Primary">
         <app-header-link [label]="'Filme'" [routerLink]="['/movies']"></app-header-link>
         <app-header-link
