--- a/src/app/pages/movies/movies.html
+++ b/src/app/pages/movies/movies.html
@@ -1,5 +1,6 @@
 <div class="movies">
   <div class="g-layout-container">
     <app-page-heading title="Movies" />
+    <pre>{{ collectionJson() }}</pre>
   </div>
 </div>
