simplify movie pages

--- a/src/app/pages/movies/movies.html
+++ b/src/app/pages/movies/movies.html
@@ -1,6 +1,5 @@
 <div class="movies">
   <div class="g-layout-container">
-    <app-page-heading title="Movies" [titleId]="sectionId" />
-    <section [attr.aria-labelledby]="sectionId"></section>
+    <app-page-heading title="Movies" />
   </div>
 </div>
