--- a/src/app/pages/movies/movie/movie.html
+++ b/src/app/pages/movies/movie/movie.html
@@ -1,13 +1,8 @@
-<div class="movies">
-  <div class="g-layout-container">
-    <app-page-heading
-      location="Film Details"
-      title="Die Rückkehr der Jedi-Ritter"
-      [titleId]="sectionId"
-      subtitle="Episode IV"
-    />
-    <section [attr.aria-labelledby]="sectionId">
-      Resource ID from router path is: {{ id() }}
-    </section>
-  </div>
+<div class="g-layout-container">
+  <app-page-heading
+    location="Film Details"
+    title="Die Rückkehr der Jedi-Ritter"
+    subtitle="Episode IV"
+  />
+  <div>Resource ID from router path is: {{ id() }}</div>
 </div>
