add mock images to film model and render the first image of each film on the movies page

--- a/src/app/pages/movies/movies.html
+++ b/src/app/pages/movies/movies.html
@@ -3,6 +3,10 @@
     <app-page-heading title="Movies" />
     @if (collection.data(); as data) {
       <pre>{{ `Found ${data.count} movies.` }}</pre>
+
+      @for (film of data.items; track film.id) {
+        <img [src]="film.images[0]" [alt]="film.title" />
+      }
     }
   </div>
 </div>
