--- a/src/app/components/resource-grid/resource-grid.html
+++ b/src/app/components/resource-grid/resource-grid.html
@@ -1,1 +1,4 @@
 <p>resource-grid works!</p>
+@for (item of items(); track $index) {
+  <app-resource-grid-item [imageUrl]="item.imageUrl" [label]="item.label" />
+}
