progress on grid component

--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="g-layout-container content">
     <div class="main">
-      <a class="logo" [routerLink]="['/']" aria-label="Go to home page">
+      <a class="logo" routerLink="/" aria-label="Go to home page">
         <svg width="83" height="37" aria-hidden="true" focusable="false">
           <use href="assets/svg-sprite-sheet/build/sprite-sheet.svg#star-wars-logo"></use>
         </svg>
