--- a/src/app/components/resource-grid/resource-grid-item/resource-grid-item.html
+++ b/src/app/components/resource-grid/resource-grid-item/resource-grid-item.html
@@ -1,4 +1,4 @@
 <img [src]="imageUrl()" [alt]="imageAlt()" />
 <div>{{ label() }}</div>
 <ng-content />
-<div>link</div>
+<a routerLink="/" aria-label="`Go to ${label}`">link</a>
