--- a/src/app/components/resource-grid/resource-grid.html
+++ b/src/app/components/resource-grid/resource-grid.html
@@ -1,3 +1,2 @@
-@for (item of items(); track $index) {
-  <app-resource-grid-item [imageUrl]="item.imageUrl" [label]="item.label" />
-}
+<div>GRID</div>
+<ng-content />
