wip resource grid item

--- a/src/app/components/image-grid/image-grid-item/image-grid-item.html
+++ b/src/app/components/image-grid/image-grid-item/image-grid-item.html
@@ -1,4 +1,8 @@
-<img [src]="imageUrl()" [alt]="imageAlt()" />
-<div>{{ label() }}</div>
-<ng-content />
-<a routerLink="/" aria-label="`Go to ${label}`">link</a>
+<div class="image-grid-item">
+  <img class="image" [src]="imageUrl()" [alt]="imageAlt()" />
+  <div class="description-container">
+    <div>{{ label() }}</div>
+    <ng-content />
+    <a routerLink="/" aria-label="`Go to ${label}`">link</a>
+  </div>
+</div>
