--- a/src/css/variables/colors.css
+++ b/src/css/variables/colors.css
@@ -8,6 +8,7 @@
   --color-grey-70: #c7cdd6;
   --color-grey-80: #d6d6d6;
   --color-grey-90: #dbdce0;
+  --color-grey-100: #efefef;
   --color-primary: var(--color-dark-blue);
   --color-secondary: var(--color-blue);
   --color-tertriary: var(--color-creme-red);
