--- a/src/app/components/image-grid/image-grid-item/image-grid-item.html
+++ b/src/app/components/image-grid/image-grid-item/image-grid-item.html
@@ -1,10 +1,13 @@
 <div class="image-grid-item">
   <img class="image" [src]="imageUrl()" [alt]="imageAlt()" />
   <div class="description-container">
-    <div>{{ label() }}</div>
-    <div class="description">
+    <div class="g-title-3 g-truncate-1">{{ label() }}</div>
+    <div class="g-text-2 description">
       <ng-content class="slot" />
     </div>
-    <a class="link" routerLink="/" [attr.aria-label]="linkLabel()">link</a>
+    <!-- TODO: An sich ist das layout der component nicht verkehrt mit den paddings usw. aber es gibt keine gute link click fläche -->
+    <a class="g-label-3 g-truncate-1 link" routerLink="/" [attr.aria-label]="linkLabel()">
+      More information...
+    </a>
   </div>
 </div>
