--- a/src/app/pages/movies/movies.html
+++ b/src/app/pages/movies/movies.html
@@ -4,17 +4,23 @@
     @let data = collection.data();
     @if (data.items.length > 0) {
       <pre>{{ `Found ${data.count} movies.` }}</pre>
-      <app-image-grid [items]="gridItems()">
-        @for (item of gridItems(); track $index) {
+      <app-image-grid>
+        @for (item of data.items; track $index) {
           <app-image-grid-item
-            [imageUrl]="item.imageUrl"
-            [imageAlt]="item.imageAlt"
-            [label]="item.label"
-            [linkLabel]="item.linkLabel"
+            [imageUrl]="item.images[0]"
+            [imageAlt]="`Image of ${item.title}`"
+            [label]="item.title"
+            [linkLabel]="`Go to ${item.title} detail page`"
           >
-            <div>foo</div>
-            <div>bar</div>
-            <div>baz</div>
+            @if (item.director) {
+              <div>Director: {{ item.director }}</div>
+            }
+            @if (item.producer) {
+              <div>Producers: {{ item.producer }}</div>
+            }
+            @if (item.releaseDate) {
+              <div>Publication Date: {{ item.releaseDate.toDateString() }}</div>
+            }
           </app-image-grid-item>
         }
       </app-image-grid>
