css: quickfix basic link color

--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -70,6 +70,10 @@ a:visited {
   color: initial;
 }
 
+a {
+  color: inherit;
+}
+
 a:not([draggable]),
 img:not([draggable]),
 audio:not([draggable]),
