implement <app-row-description-list>

--- a/src/app/pages/movies/movie/movie.html
+++ b/src/app/pages/movies/movie/movie.html
@@ -9,21 +9,7 @@
       <div>
         <section aria-labelledby="details-heading">
           <h2 class="g-title-3" id="details-heading">Details:</h2>
-          <!-- TODO: eine kleine DescriptionList component erstellen, wlche die text inhalte als input bekommt mit input vom typ `{term: string, detail: string}[] oder so`-->
-          <dl class="meta">
-            <div>
-              <dt class="g-label-1">Regie:</dt>
-              <dd class="g-text-1">Christopher Nolan</dd>
-            </div>
-            <div>
-              <dt class="g-label-1">Erscheinungsjahr:</dt>
-              <dd class="g-text-1">2010</dd>
-            </div>
-            <div>
-              <dt class="g-label-1">Laufzeit:</dt>
-              <dd class="g-text-1">148 Minuten</dd>
-            </div>
-          </dl>
+          <app-row-description-list [items]="descriptionRows()" />
           <p class="g-text-1 description">
             DESCRIPTION DESCRIPTION DESCRIPTION DESCRIPTION DESCRIPTION DESCRIPTION
             DESCRIPTION DESCRIPTION DESCRIPTION DESCRIPTION DESCRIPTION DESCRIPTION
