start implementing image slider

--- a/src/app/pages/movies/movies.html
+++ b/src/app/pages/movies/movies.html
@@ -6,7 +6,7 @@
       <app-image-grid>
         @for (item of data.items; track $index) {
           <app-image-grid-item
-            [imageUrl]="item.images[0]"
+            [imageUrl]="item.images[0].url"
             [imageAlt]="imageAlt(item)"
             [label]="item.title"
             [linkLabel]="linkLabel(item)"
