--- a/src/app/pages/movies/movie/movie.html
+++ b/src/app/pages/movies/movie/movie.html
@@ -13,7 +13,9 @@
           <p class="g-text-1 description">{{ data.openingCrawl }}</p>
         </section>
       </div>
-      <div>Image Slider will be here</div>
+      @if (data.images.length) {
+        <app-image-slider [images]="data.images" />
+      }
       <aside aria-labelledby="characters-heading">
         <h2 class="g-title-3" id="characters-heading">Charaktere:</h2>
         <nav>
