--- a/src/app/components/image-slider/image-slider.css
+++ b/src/app/components/image-slider/image-slider.css
@@ -1,5 +1,18 @@
 .image-slider {
+  width: 100%;
+  height: 100%;
+  background-color: aliceblue;
+  padding: 2rem;
 }
 
-.image {
+.viewport {
+  overflow: hidden;
+}
+
+.slides {
+  display: grid;
+  grid-auto-flow: column;
+}
+
+.slide {
 }
