--- a/src/app/components/image-slider/image-slider.html
+++ b/src/app/components/image-slider/image-slider.html
@@ -1,11 +1,15 @@
 <div class="image-slider">
-  @for (image of images(); track $index) {
-    <img
-      class="image"
-      [src]="image.url"
-      [alt]="image.alt"
-      [width]="image.width"
-      [height]="image.height"
-    />
-  }
+  <div class="viewport">
+    <div class="slides">
+      @for (image of images(); track $index) {
+        <img
+          class="slide"
+          [src]="image.url"
+          [alt]="image.alt"
+          [width]="image.width"
+          [height]="image.height"
+        />
+      }
+    </div>
+  </div>
 </div>
