--- a/src/css/variables/colors.css
+++ b/src/css/variables/colors.css
@@ -7,7 +7,7 @@
   --color-grey-60: #bbbbbb;
   --color-grey-70: #c7cdd6;
   --color-grey-80: #d6d6d6;
-  --color-grey-90: #dbdce0;
+  --color-grey-90: #dcdcdc;
   --color-grey-100: #efefef;
   --color-primary: var(--color-dark-blue);
   --color-secondary: var(--color-blue);
