--- a/src/app/components/header/header.html
+++ b/src/app/components/header/header.html
@@ -3,7 +3,10 @@
     <div class="main">
       <a class="logo" routerLink="/" aria-label="Go to home page">
         <svg width="83" height="37" aria-hidden="true" focusable="false">
-          <use href="assets/svg-sprite-sheet/build/sprite-sheet.svg#star-wars-logo"></use>
+          <use
+            href="/assets/svg-sprite-sheet/build/sprite-sheet.e12f08b580e7ccf1473c0a9c4f93af72c96f622d9c82a2554e31c36f1c78c626
+.svg#star-wars-logo"
+          />
         </svg>
       </a>
       <!-- TODO: Make use of [Angular Aria](https://angular.dev/guide/aria/overview) for this navigation -->
