--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,5 +1,8 @@
-<div class="home g-layout-container">
-  <svg width="989" height="441" class="logo" role="img" aria-label="Star Wars logo">
-    <use href="assets/svg-sprite-sheet/build/sprite-sheet.svg#star-wars-logo"></use>
+<div class="g-layout-container home">
+  <svg class="logo" width="989" height="441" role="img" aria-label="Star Wars Logo">
+    <use
+      href="/assets/svg-sprite-sheet/build/sprite-sheet.e12f08b580e7ccf1473c0a9c4f93af72c96f622d9c82a2554e31c36f1c78c626
+.svg#star-wars-logo"
+    />
   </svg>
 </div>
