--- a/src/app/pages/movies/movie/movie.html
+++ b/src/app/pages/movies/movie/movie.html
@@ -14,7 +14,7 @@
         </section>
       </div>
       @if (data.images.length) {
-        <app-image-slider [images]="data.images" />
+        <app-image-slider [images]="data.images" [viewportHeight]="374" />
       }
       <aside aria-labelledby="characters-heading">
         <h2 class="g-title-3" id="characters-heading">Charaktere:</h2>
