--- a/src/app/components/image-slider/image-slider.css
+++ b/src/app/components/image-slider/image-slider.css
@@ -1,14 +1,14 @@
 .image-slider {
   width: 100%;
   height: 100%;
-  background-color: aliceblue;
-  padding: 2rem;
   display: grid;
   justify-items: center;
+  row-gap: 16px;
 }
 
 .viewport {
   overflow: hidden;
+  background-color: red;
 }
 
 .slides {
@@ -20,6 +20,9 @@
 }
 
 .indicators {
+  display: grid;
+  grid-auto-flow: column;
+  column-gap: 5px;
 }
 
 .indicator {
