--- a/src/app/components/image-slider/image-slider.html
+++ b/src/app/components/image-slider/image-slider.html
@@ -13,10 +13,11 @@
     </div>
   </div>
   <div class="indicators" aria-hidden="true">
-    @for (image of images(); track $index) {
+    @for (image of images(); track $index; let i = $index) {
       <button>
         <svg
           class="indicator"
+          [class.indicator-active]="i === activeIndex()"
           width="11"
           height="11"
           aria-hidden="true"
