--- a/src/app/components/image-slider/image-slider.html
+++ b/src/app/components/image-slider/image-slider.html
@@ -1,18 +1,18 @@
 <div class="image-slider">
   <div class="viewport" [style]="{ height: `${viewportHeight()}px` }" #viewport>
-    <div class="slides">
-      <!-- TODO: Add Angular Aria based keyboard navigation -->
-      <!-- TODO: Add Angular based swipe navigation -->
-      @for (image of images(); track $index) {
-        <img
-          class="slide"
-          [src]="image.url"
-          [alt]="image.alt"
-          [width]="image.width"
-          [height]="image.height"
-        />
-      }
-    </div>
+    @if (viewportWidth() > 0) {
+      <div class="slides">
+        @for (image of images(); track $index) {
+          <img
+            class="slide"
+            [src]="image.url"
+            [alt]="image.alt"
+            [width]="image.width"
+            [height]="image.height"
+          />
+        }
+      </div>
+    }
   </div>
   <div class="indicators" aria-hidden="true">
     @for (image of images(); track $index; let i = $index) {
@@ -33,4 +33,5 @@
       </button>
     }
   </div>
+  <div [style]="{ fontSize: '3rem', color: 'white' }">{{ viewportWidth() }}</div>
 </div>
