--- a/src/app/components/image-slider/image-slider.html
+++ b/src/app/components/image-slider/image-slider.html
@@ -1,30 +1,30 @@
 <div class="image-slider">
   <div class="viewport" [style]="{ height: `${viewportHeight()}px` }" #viewport>
     @if (viewportWidth() > 0) {
-      <div class="slides">
+      <div class="slides" [style]="{ transform: `translateX(${-slidesX()}px)` }">
         @for (image of images(); track $index) {
-          <img
-            class="slide"
-            [src]="image.url"
-            [alt]="image.alt"
-            [width]="image.width"
-            [height]="image.height"
-          />
+          <div class="slide" [style]="{ width: `${viewportWidth()}px` }">
+            <img
+              class="image"
+              [src]="image.url"
+              [alt]="image.alt"
+              [width]="image.width"
+              [height]="image.height"
+            />
+          </div>
         }
       </div>
     }
   </div>
   <div class="indicators" aria-hidden="true">
     @for (image of images(); track $index; let i = $index) {
-      <button type="button" (click)="activeIndex.set(i)">
-        <svg
-          class="indicator"
-          [class.indicator-active]="i === activeIndex()"
-          width="11"
-          height="11"
-          aria-hidden="true"
-          focusable="false"
-        >
+      <button
+        type="button"
+        (click)="setActiveIndex(i)"
+        class="indicator"
+        [class.indicator-active]="i === activeIndex()"
+      >
+        <svg width="11" height="11" aria-hidden="true" focusable="false">
           <use
             href="/assets/svg-sprite-sheet/build/sprite-sheet.e12f08b580e7ccf1473c0a9c4f93af72c96f622d9c82a2554e31c36f1c78c626
 .svg#circle"
@@ -33,5 +33,8 @@
       </button>
     }
   </div>
-  <div [style]="{ fontSize: '3rem', color: 'white' }">{{ viewportWidth() }}</div>
+  <!-- <div>
+    <button type="button" (click)="decrementActiveIndex()">left</button>
+    <button type="button" (click)="icrementActiveIndex()">right</button>
+  </div> -->
 </div>
