wip on image slider: add sipe directive

--- a/src/app/components/image-slider/image-slider.css
+++ b/src/app/components/image-slider/image-slider.css
@@ -18,6 +18,11 @@
   display: flex;
   grid-auto-flow: column;
   transition: transform cubic-bezier(0.075, 0.82, 0.165, 1) 1s;
+  cursor: grab;
+}
+
+.slides-swiping {
+  cursor: grabbing;
 }
 
 .slide {
